modified css for alert margin

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -44,6 +44,13 @@
     max-height: 220px;
 }
 
+.alert {
+  padding: 15px;
+  margin-bottom: 2px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
 @-webkit-keyframes argh-my-eyes {
     0%   { background-color: #d9534f; }
     49% { background-color: #d9534f; }
