Changed iframe to be responsive and removed button class from linlk

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -5,7 +5,7 @@
     <div class="panel-body">
             <strong>User:</strong> {{ app.user.username }}
             <br>
-            <a href="{{ path('event_weather_radar') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+            <a href="{{ path('event_weather_radar') }}">
                 <p id="SidebarWeather"></p>
             </a>
     </div>
