Changed iframe title

--- a/app/Resources/views/iframe.html.twig
+++ b/app/Resources/views/iframe.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-Event Control Fire Register
+Event Control
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
