--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -135,7 +135,11 @@
 <div class="row">
         <h4>Files & Information</h4>
 </div>
-<a href="{{ path('media_iframe', {'filename': "ECCoP", 'type': "pdf"}) }}"  target="_blank" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+{% if is_mobile_view() %}
+    <a href="{{ path('media', {'filename': "ECCoP", 'type': "pdf"}) }}"  target="_blank" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+{% elseif %}
+    <a href="{{ path('media_iframe', {'filename': "ECCoP", 'type': "pdf"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+{ %endif %}
     <div class="row">
         Code of Practice
     </div>
