--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -54,7 +54,7 @@ Events Settings
                                                     {% if is_full_view() %}
                                                         <a href="{{ path('event_report_iframe', {'eventId': event.id}) }}"><span class="glyphicon glyphicon-open-file" aria-hidden="true" aria-label="Open Last Report"></span>{{ event.event_report_filename }}</a>
                                                     {% else %}
-                                                        <a href="{{ path('event_report', {'eventId': event.id}) }}" target="_blank"><span class="glyphicon glyphicon-open-file" aria-hidden="true" aria-label="Open Last Report"></span>{{ event.event_report_filename }}</a>
+                                                        <a href="{{ path('event_report_view', {'eventId': event.id}) }}" target="_blank"><span class="glyphicon glyphicon-open-file" aria-hidden="true" aria-label="Open Last Report"></span>{{ event.event_report_filename }}</a>
                                                     {% endif %}
                                                 {% else %}
                                                     No report available
