--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -93,16 +93,16 @@ Control Room Log
                 <div class="row" id="Legend">
                     <div class="col-md-12">
                         <h4>Legend</h4>
-                        <div class="col-md-6">
-                            <h5>Log Type</h5>
+                        <div class="col-md-3">
+                            <strong>Log Type</strong>
                             <ul class="list-group">
                                 <li class="list-group-item"><span class="label label-default">Closed</span></li>
                                 <li class="list-group-item"><span class="label label-primary">General</span></li>
                                 <li class="list-group-item"><span class="label label-info">Lost Property</span></li>
                             </ul>
                         </div>
-                        <div class="col-md-6">
-                            <h5>Severity / Priority</h5>
+                        <div class="col-md-3">
+                            <strong>Severity / Priority</strong>
                             <ul class="list-group">
                                 <li class="list-group-item"><span class="label severity1">Very High</span></li>
                                 <li class="list-group-item"><span class="label severity2">High</span></li>
