--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -93,7 +93,7 @@ Control Room Log
                 <div class="row" id="Legend">
                     <div class="col-md-12">
                         <h4>Legend</h4>
-                        <div class="col-md-2">
+                        <div class="col-md-2 col-sm-1">
                             <strong>Log Type</strong>
                             <ul class="list-group">
                                 <li class="list-group-item"><span class="label label-default">Closed</span></li>
@@ -101,7 +101,7 @@ Control Room Log
                                 <li class="list-group-item"><span class="label label-info">Lost Property</span></li>
                             </ul>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-2 col-sm-1">
                             <strong>Severity / Priority</strong>
                             <ul class="list-group">
                                 <li class="list-group-item"><span class="label severity1">Very High</span></li>
