Added Control room checklist to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -145,7 +145,16 @@
     <div class="row">
         Code of Practice
     </div>
-</a>
+    </a>
+{% if is_mobile_view() %}
+    <a href="{{ path('media', {'filename': "CRC", 'type': "pdf"}) }}"  target="_blank" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+{% else %}
+    <a href="{{ path('media_iframe', {'filename': "CRC", 'type': "pdf"}) }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+{% endif %}
+    <div class="row">
+        Control Room Checklist
+    </div>
+    </a>
 {% if is_granted('ROLE_USER') %}
     <div class="row">
             <h4>Control Room Functions</h4>
