--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -14,7 +14,7 @@
 
             <p>
                 The requested page couldn't be located. Checkout for any URL
-                misspelling or <a href="{{ path('homepage') }}">return to the homepage</a>.
+                misspelling or <a href="{{ path('full_log') }}">return to the homepage</a>.
             </p>
         {% endblock %}
         {% block sidebar %}
