--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -8,9 +8,9 @@
         {% block content %}
 
             {# example security usage, see below #}
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            {# if is_granted('IS_AUTHENTICATED_FULLY') #}
                 {# ... #}
-            {% endif %}
+            {# endif #}
 
             <p>
                 The requested page couldn't be located. Checkout for any URL
