--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -18,7 +18,7 @@
             </p>
         {% endblock %}
         {% block sidebar %}
-            {% include 'sidebar.twig' %}
+            {# include 'sidebar.twig' #}
         {% endblock %}
     {% endembed %}
 {% endblock %}
