--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -18,7 +18,9 @@
             </p>
         {% endblock %}
         {% block sidebar %}
-            {# include 'sidebar.twig' #}
+            {% if app.user %}
+                {% include 'sidebar.twig' %}
+            {% endif %}
         {% endblock %}
     {% endembed %}
 {% endblock %}
