--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -14,7 +14,7 @@ Ooops! - {{ status_code }}
             <h1> This page could not be found!</h1>
             <br>
             <p>
-                The requested page couldn't be located. Checkout for any URL
+                The requested page couldn't be located. Check for any URL
                 misspelling or <a href="{{ path('full_log') }}">return to the homepage</a>.
             </p>
         {% endblock %}
