--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -22,7 +22,9 @@ Ooops! - {{ status_code }}
             
         {% endblock %}
         {% block sidebar %}
-            {% include 'sidebar.twig' %}
+            {% if app.user %}
+                {% include 'sidebar.twig' %}
+            {% endif %}
         {% endblock %}
     {% endembed %}
 {% endblock %}
