--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -69,6 +69,7 @@
     <div class="row">
         <h4>Status</h4>
     </div>
+    {% include 'PeopleCountingModule.twig' %}
     <div class="panel panel-info">
         <div class="panel-heading">
             Current Occupancy
@@ -79,6 +80,7 @@
             {% endfor %}
         </ul>
     </div>
+    {% include 'UPSModule.twig' %}
     <div class="panel panel-warning">
         <div class="panel-heading">
             UPS Status
