--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -69,7 +69,9 @@
     <div class="row">
         <h4>Status</h4>
     </div>
-    //{% include 'PeopleCountingModule.html.twig' %}
+    {# 
+        {% include 'PeopleCountingModule.html.twig' %}
+    #}
     {% include 'UPSModule.html.twig' %}
 {% endif %}
 <div class="row">
