--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -72,6 +72,14 @@
     {# 
         {% include 'PeopleCountingModule.html.twig' %}
     #}
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                Current Occupancy
+            </div>
+            <ul class="list-group">
+                <li class="list-group-item" id="0">Purchase this People Counting Module now for the Low Low Price of $19.99 per hour and receive your free copy of People Counting Magazine.</li>
+            </ul>
+        </div>
     {% include 'UPSModule.html.twig' %}
 {% endif %}
 <div class="row">
