Updated Alert query

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -175,6 +175,15 @@
                         }
                     });
                 }
+                
+            function AlertUpdate()
+                {
+                $.getJSON('{{ path('Alert_Queue') }}', function(data) {
+                    $.each(data, function(index, alert) {
+
+                    });
+                });
+            }
 
             $(document).ready(function()
             {
