Attempted to ad json and js alert system in place

--- a/app/Resources/views/3-9.html.twig
+++ b/app/Resources/views/3-9.html.twig
@@ -18,7 +18,7 @@
       </div>
       <div class="modal-body" id="mainModalBody">
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer" id="mainModalFooter">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
