fixed error in js

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -193,7 +193,7 @@
                 {
                 if(alertData)
                 {
-                    if(alertData.length < 2
+                    if(alertData.length < 2)
                     {
                         $('#mainModalLabel').html(alertData[1].title);
                         $('#mainModalBody').html(alertData[1].message);
