Modified js assignment of alertdat

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -181,7 +181,7 @@
             function AlertUpdate()
                 {
                 $.getJSON('{{ path('Alert_Queue') }}', function(data) {
-                    alertData = (data)
+                    alertData = data;
                     //$.each(data, function(index, alert) {
                         //$('#mainModalLabel').html(alert.title);
                         //$('#mainModalBody').html(alert.message);
