--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -199,7 +199,7 @@
                     
             }
             
-            function loadAlertModal(var alerts, var i)
+            function loadAlertModal(alerts, i)
             {
                 $('#mainModalLabel').html(alerts[i].title);
                 $('#mainModalBody').html(alerts[i].message);           
