fixed bug in js arith

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -224,12 +224,12 @@
             }
             
             $('#alerts-previous').click(function(){
-                alertNumber-1;
+                alertNumber = alertNumber-1;
                 AlertCheck();
             });
             
             $('#alerts-next').click(function(){
-                alertNumber+1;
+                alertNumber = alertNumber+1;
                 AlertCheck();
             });
 
