Added some debuging code

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -225,11 +225,13 @@
             
             $('#alerts-previous').click(function(){
                 alertNumber = alertNumber-1;
+                previous = true;
                 AlertCheck();
             });
             
             $('#alerts-next').click(function(){
                 alertNumber = alertNumber+1;
+                next = true;
                 AlertCheck();
             });
 
